@@ -2,8 +2,10 @@ package org._p1m.foodorderingsystem.model;
 
 import org.springframework.security.core.GrantedAuthority;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class UserDetail implements UserDetails {
@@ -17,8 +19,9 @@ private final User user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
-    }
+        return Collections.singletonList(
+                new SimpleGrantedAuthority(user.getRole().getName())
+        );    }
 
     @Override
     public String getPassword() {
